spring security basicAuth; uuid to string; minor fixes